More Corrections to previous plus split of rent to rent to and from with use-case corrections and creation of robustness diagrams

--- a/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
+++ b/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
@@ -66,7 +66,7 @@
     \item Το σύστημα δείχνει τη λίστα με τα διαθέσιμα βιβλία στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
     \item Ο χρήστης επιλέγει ένα από τα βιβλία.
     \item Το σύστημα φορτώνει τη λίστα των ιδιοκτητών που προσφέρουν το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή του βιβλίου ανά μέρα, την πόλη που μένει ο κάθε χρήστης, το σκορ του (που προκύπτει από τα ratings άλλων χρηστών) και κουμπί που του επιτρέπει να κάνει αίτηση ενοικίασης του βιβλίου στον χρήστη αυτόν.
-    \item Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη με συναλλαγή δια ζώσης".
+    \item Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη".
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 1: Αναζήτηση χρήστη - Αυτός υπάρχει:}
@@ -91,7 +91,7 @@
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.3.] Το σύστημα δείχνει τη λίστα με τα βιβλία για τα οποία υπάρχουν αιτήσεις που πληρούν τα κριτήρια αναζήτησης στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.4.] Ο χρήστης επιλέγει ένα από τα βιβλία.
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.5.] Το σύστημα φορτώνει τη λίστα των χρηστών που έχουν κάνει αίτηση για το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή που προτίθενται να πληρώσει ο κάθε χρήστης για το βιβλίο ανά μέρα, την πόλη που μένει ο καθένας, το σκορ τους και κουμπί που του επιτρέπει να κάνει αποδοχή της αίτησης.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.6.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη με συναλλαγή δια ζώσης" (από τη μεριά του ιδιοκτήτη).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.6.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη" (από τη μεριά του ιδιοκτήτη).
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 4: Αναζήτηση αίτησης - Αυτή δεν υπάρχει:}
@@ -105,7 +105,7 @@
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.ε.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "μόνο δια ζώσης" και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
     \item[\ref{Επιλογή τύπου αναζήτησης}.ε.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Ύπαρξη βιβλίου} της βασικής ροής μέχρι και το βήμα 5 (δεν θέλω να το αντιγράψω εδώ).
-    \item[\ref{Επιλογή τύπου αναζήτησης}.ε.3.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη με ταχυδρομική συναλλαγή".
+    \item[\ref{Επιλογή τύπου αναζήτησης}.ε.3.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη".
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 6: Αναζήτηση βιβλίου - Αυτό δεν υπάρχει:}
@@ -118,28 +118,29 @@
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.α.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "μόνο δια ζώσης", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.α.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 1.γ.1.2 της βασικής ροής, μέχρι το βήμα 1.γ.1.5 (δεν θέλω να το αντιγράψω εδώ).
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.α.3.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη με ταχυδρομική συναλλαγή" (από τη μεριά του ιδιοκτήτη).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.α.3.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη" (από τη μεριά του ιδιοκτήτη).
 \end{enumerate}
 
-\subsection{Ενοικίαση βιβλίου από άλλο χρήστη με συναλλαγή δια ζώσης}
+\subsection{Ενοικίαση βιβλίου από άλλο χρήστη}
 \label{Rental Use Case}
-\subsubsection*{Βασική Ροή <<Ενοικίαση βιβλίου από άλλο χρήστη με συναλλαγή δια ζώσης>>:}
+\subsubsection*{Βασική Ροή <<Ενοικίαση βιβλίου από άλλο χρήστη>>:}
 \begin{enumerate}
-    \item Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε, επιλέγοντας συναλλαγή δια ζώσης.
+    \item Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε.
         \label{Επιλογή τρόπου συναλλαγής}
     \item Το σύστημα επιβεβαιώνει ότι ο ενοικιαστής έχει αρκετά χρήματα στο λογαριασμό του για να καλύψει το "ποσό ασφαλείας" που θα δεσμευτεί αργότερα από τον λογαριασμό του.
         \label{Έλεγχος ποσού ασφαλείας}
     \item Το σύστημα επιβεβαιώνει ότι η αίτηση ενοικίασης έχει γίνει αποδεκτή από τον ιδιοκτήτη.
         \label{Αποδοχή ή απόρριψη συναλλαγής}
-    \item Το σύστημα εμφανίζει στοιχεία επικοινωνίας του ιδιοκτήτη στον ενοικιαστή.
-    \item Ο ενοικιαστής, αφού βρεθεί με τον ιδιοκτήτη δια ζώσης και παραλάβει το βιβλίο, ενημερώνει το σύστημα ότι έχει κατοχή του βιβλίου. Ο ιδιοκτήτης επίσης ενημερώνει το σύστημα.
+    \item Το σύστημα εμφανίζει στοιχεία επικοινωνίας του ιδιοκτήτη στον ενοικιαστή και αντίστροφα.
+    \item Ο ενοικιαστής, αφού βρεθεί με τον ιδιοκτήτη δια ζώσης και παραλάβει το βιβλίο ή το βιβλίο φτάσει σε αυτόν μέσω ταχυδρομείου, ενημερώνει το σύστημα ότι έχει κατοχή του βιβλίου. Ο ιδιοκτήτης επίσης ενημερώνει το σύστημα.
     \item Το σύστημα ελέγχει αν έλαβε ενημέρωση κατοχής του βιβλίου και από τον ενοικιαστή και από τον ιδιοκτήτη.
         \label {Δεν ενημερώνεται η κατοχή}
     \item Το σύστημα δεσμεύει "ποσό ασφαλείας" από τον λογαριασμό του ενοικιαστή, και αρχίζει να τον χρεώνει αυτόματα μέρα με τη μέρα.
         \label{Τέλος dispute resolved - Τέλος χρημάτων}
-    \item Ο ενοικιαστής, αφού τελειώσει το βιβλίο, βρίσκεται πάλι με τον ιδιοκτήτη και του παραχωρεί το βιβλίο, έπειτα του οποίου ενημερώνουν και οι δύο το σύστημα ότι το βιβλίο έχει επιστραφεί.
+    \item Ο ενοικιαστής, αφού τελειώσει το βιβλίο, βρίσκεται πάλι με τον ιδιοκτήτη και του παραχωρεί το βιβλίο ή αποστέλλει πίσω το βιβλίο ταχυδρομικώς, και όταν αυτό βρίσκεται πλέον πίσω στην κατοχή του ιδιοκτήτη ενημερώνουν και οι δύο το σύστημα για την επιτυχή επιστροφή του βιβλίου.
         \label{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}
-    \item Το σύστημα, αφού λάβει ενημέρωση επιστροφής βιβλίου και από τα δύο μέλη, σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας".
+    \item Το σύστημα ελέγχει ότι έχει λάβει ενημέρωση επιστροφής βιβλίου και από τα δύο μέλη. 
+    \item Το σύστημα σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας". Επίσης καταγράφει την λήξη της συναλλαγής και την αποθηκεύει στο ιστορικό συναλλαγών των δύο χρηστών.
         \label{Τέλος ενοικίασης}
 \end{enumerate}
 
@@ -153,38 +154,39 @@
 \begin{enumerate}
     \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.1.] Το σύστημα παρατηρεί ότι η αίτηση ενοικίασης απορρίπτεται από τον ιδιοκτήτη.
     \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι η αίτησή του απορρίφθηκε από τον ιδιοκτήτη.
+    \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.3.] Η συναλλαγή ολοκληρώνεται και αποθηκεύεται (ως ακυρωμένη) στο ιστορικό συναλλαγών των δύο χρηστών από το σύστημα.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 3: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση προβλήματος:}
 \begin{enumerate}
-    \item[\ref{Δεν ενημερώνεται η κατοχή}.α.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ιδιοκτήτη και όχι από τον ενοικιαστή, ή αντίστροφα.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}.α.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ιδιοκτήτη και όχι από τον ενοικιαστή.
     \item[\ref{Δεν ενημερώνεται η κατοχή}.α.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
-    \item[\ref{Δεν ενημερώνεται η κατοχή}.α.3.] Το σύστημα λαμβάνει ενημέρωση κατοχής και από τον δεύτερο χρήστη.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}.α.3.] Το σύστημα λαμβάνει ενημέρωση κατοχής και από τον ενοικιαστή.
     \item[\ref{Δεν ενημερώνεται η κατοχή}.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Τέλος dispute resolved - Τέλος χρημάτων} της βασικής ροής.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 4: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση από υποστήριξη πελατών:}
 \begin{enumerate}
-    \item[\ref{Δεν ενημερώνεται η κατοχή}.β.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ιδιοκτήτη και όχι από τον ενοικιαστή, ή αντίστροφα.
-    \item[\ref{Δεν ενημερώνεται η κατοχή}.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
-    \item[\ref{Δεν ενημερώνεται η κατοχή}.β.3.] Το σύστημα δεν λαμβάνει ενημέρωση κατοχής και από τον δεύτερο χρήστη.
-    \item[\ref{Δεν ενημερώνεται η κατοχή}.β.4.] Το σύστημα ενημερώνεται από την υποστήριξη πελατών και το "ποσό ασφαλείας" αποστέλλεται στον λογαριασμό του χρήστη που αποφάσισε η υποστήριξη πελατών ότι αδικήθηκε.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}.β.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ιδιοκτήτη και όχι από τον ενοικιαστή.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}.β.3.] Το σύστημα δεν λαμβάνει ενημέρωση κατοχής και από τον ενοικιαστή.
+    \item[\ref{Δεν ενημερώνεται η κατοχή}.β.4.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν με την υποστήριξη πελατών.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 5: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση προβλήματος:}
 \begin{enumerate}
     \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.α.1.] Το σύστημα λαμβάνει ενημέρωση επιστροφής από τον ιδιοκτήτη και όχι από τον ενοικιαστή, ή αντίστροφα.
     \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.α.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
-    \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.α.3.] Το σύστημα λαμβάνει ενημέρωση επιστροφής και από τον δεύτερο χρήστη.
+    \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.α.3.] Το σύστημα λαμβάνει ενημέρωση επιστροφής και από τον ενοικιαστή.
     \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Τέλος ενοικίασης}.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 6: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση από υποστήριξη πελατών:}
 \begin{enumerate}
     \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.β.1.] Το σύστημα λαμβάνει ενημέρωση επιστροφής από τον ιδιοκτήτη και όχι από τον ενοικιαστή, ή αντίστροφα.
-    \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
-    \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.β.3.] Το σύστημα δεν λαμβάνει ενημέρωση επιστροφής και από τον δεύτερο χρήστη.
-    \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.β.4.] Το σύστημα ενημερώνεται από την υποστήριξη πελατών και το "ποσό ασφαλείας" αποστέλλεται στον λογαριασμό του χρήστη που αποφάσισε η υποστήριξη πελατών ότι αδικήθηκε.
+    \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους.
+    \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.β.3.] Το σύστημα δεν λαμβάνει ενημέρωση επιστροφής και από ενοικιαστή.
+    \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.β.4.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν με την υποστήριξη πελατών.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 7: Τέλος χρημάτων ενοικιαστή - Μετέπειτα προσθήκη απαραίτητου ποσού:}
@@ -204,80 +206,57 @@
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.β.4.] Το σύστημα προσφέρει αυτόματα το "ποσό ασφαλείας" στον ιδιοκτήτη και απενεργοποιεί τη δυνατότητα του ενοικιαστή να νοικιάσει άλλο βιβλίο, μέχρι να πληρώσει το χρωστούμενο ποσό.
 \end{enumerate}
 
-\section{Ενοικίαση βιβλίου από άλλο χρήστη με ταχυδρομική συναλλαγή}
-\subsubsection*{Βασική Ροή <<Ενοικίαση βιβλίου από άλλο χρήστη με ταχυδρομική συναλλαγή:}
+\subsection{Ενοικίαση βιβλίου σε άλλο χρήστη (μεριά ιδιοκτήτη)}
+\subsubsection*{Βασική Ροή <<Ενοικίαση βιβλίου σε άλλο χρήστη (μεριά ιδιοκτήτη)>>:}
 \begin{enumerate}
-    \item Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε, επιλέγοντας συναλλαγή ταχυδρομικώς.
-    \item Το σύστημα επιβεβαιώνει ότι ο ενοικιαστής έχει αρκετά χρήματα στο λογαριασμό του για να καλύψει το "ποσό ασφαλείας" που θα δεσμευτεί αργότερα από τον λογαριασμό του.
-    \item Το σύστημα επιβεβαιώνει ότι η αίτηση ενοικίασης έχει γίνει αποδεκτή από τον ιδιοκτήτη και ότι έχει γίνει η αποστολή.
-    \item Το σύστημα εμφανίζει τα στοιχεία του ιδιοκτήτη και το tracking number από την αποστολή στον ενοικιαστή, και γίνεται δέσμευση του "ποσού ασφαλείας" από τον λογαριασμό του ενοικιαστή.
-    \item Ο ενοικιαστής, αφού παραλάβει το βιβλίο ταχυδρομικώς, ενημερώνει το σύστημα ότι έχει κατοχή του βιβλίου (η αντίστοιχη ενημέρωση κατοχής από τον ιδιοκτήτη γίνεται αυτόματα μέσω της κατάστασης δέματος με χρήση του tracking number).
-    \item Το σύστημα, αφού λάβει ενημέρωση κατοχής του βιβλίου και από τον ενοικιαστή, αρχίζει να τον χρεώνει μέρα με τη μέρα.
-    \item Ο ενοικιαστής, αφού τελειώσει το βιβλίο, στέλνει πίσω στον ιδιοκτήτη το βιβλίο ταχυδρομικώς και ενημερώνει τη πλατφόρμα με tracking number (το οποίο θα χρησιμοποιηθεί για να ανανεωθεί η κατάσταση κατοχής αυτόματα).
-    \item Το σύστημα ενημερώνει τον ιδιοκτήτη για την αποστολή επιστροφής και του δείχνει το tracking number.
-    \item Ο ιδιοκτήτης, αφού λάβει το βιβλίο κάνει ενημέρωση επιστροφής βιβλίου στη πλατφόρμα (η αντίστοιχη ενημέρωση επιστροφής από τη μεριά του ενοικιαστή γίνεται αυτόματα μέσω του tracking number).
-    \item Το σύστημα, αφού λάβει ενημέρωση επιστροφής βιβλίου και από τα δύο μέλη, σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας".
+    \item Ο ιδιοκτήτης αποδέχεται την αίτηση ενοικίασης βιβλίου που του έκανε ένας άλλος χρήστης.
+    \item Το σύστημα καταγράφει ότι η αίτηση ενοικίασης έχει γίνει αποδεκτή από τον ιδιοκτήτη.
+    \item Το σύστημα εμφανίζει στοιχεία επικοινωνίας του ιδιοκτήτη στον ενοικιαστή και αντίστροφα.
+    \item Ο ιδιοκτήτης βρίσκεται με τον ενοικιαστή δια ζώσης και του δίνει το βιβλίο, ή στέλνει το βιβλίο ταχυδρομικώς (ανάλογα τον τύπο συναλλαγής που επιλέχθηκε) και ενημερώνει τη πλατφόρμα (δήλωση αλλαγής κατοχής) όταν ο ενοικιαστής πλέον έχει το βιβλίο (αφού του το δώσει ή αφού φτάσει σύμφωνα με το tracking number του ταχυδρομείου αντίστοιχα).
+    \item Το σύστημα ελέγχει ότι έχει λάβει ενημέρωση κατοχής του βιβλίου και από τους δύο χρήστες. 
+    \item Το σύστημα δεσμεύει το "ποσό ασφαλείας" από τον ενοικιαστή και αρχίζει να τον χρεώνει μέρα με τη μέρα, μεταφέροντας καθημερινά το ποσό χρέωσης από τον λογαριασμό του ενοικιαστή στον λογαριασμό του ιδιοκτήτη.
+    \item Ο ιδιοκτήτης, αφού λάβει πίσω το βιβλίο από συνάντηση δια ζώσης ή ταχυδρομικώς, ενημερώνει την πλατφόρμα ότι το βιβλίο επιστράφηκε (δήλωση επιστροφής).
+    \item Το σύστημα ελέγχει ότι έχει λάβει ενημέρωση επιστροφής βιβλίου και από τα δύο μέλη.
+    \item Το σύστημα σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας". Επίσης καταγράφει την λήξη της συναλλαγής και την αποθηκεύει στο ιστορικό συναλλαγών των δύο χρηστών.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 1: Ο ενοικιαστής δεν έχει αρκετό υπόλοιπο για να καλύψει το "ποσό ασφαλείας":}
+\subsubsection*{Εναλλακτική Ροή 1: Η συναλλαγή απορρίπτεται από τον ιδιοκτήτη:}
 \begin{enumerate}
-    \item[2.1.] Το σύστημα παρατηρεί ότι ο ενοικιαστής δεν έχει αρκετό χρηματικό ποσό στο λογαριασμό για να καλύψει το "ποσό ασφαλείας".
-    \item[2.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι δεν έχει αρκετά χρήματα στον λογαριασμό του και να προσθέσει αν θέλει να κάνει την αίτηση ενοικίασης.
+    \item[1.1.] Ο ιδιοκτήτης απορρίπτει την αίτηση ενοικίασης βιβλίου που του έκανε ένας άλλος χρήστης.
+    \item[1.2.] Το σύστημα παρατηρεί ότι η αίτηση ενοικίασης απορρίπτεται από τον ιδιοκτήτη.
+    \item[1.3.] Η συναλλαγή ολοκληρώνεται και αποθηκεύεται (ως ακυρωμένη) στο ιστορικό συναλλαγών των δύο χρηστών από το σύστημα.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 2: Η συναλλαγή απορρίπτεται από τον ιδιοκτήτη:}
+\subsubsection*{Εναλλακτική Ροή 2: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση προβλήματος:}
 \begin{enumerate}
-    \item[3.1.] Το σύστημα παρατηρεί ότι η αίτηση ενοικίασης απορρίπτεται από τον ιδιοκτήτη.
-    \item[3.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι η αίτησή του απορρίφθηκε από τον ιδιοκτήτη.
+    \item[5.α.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ενοικιαστή και όχι από τον ιδιοκτήτη.
+    \item[5.α.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
+    \item[5.α.3.] Το σύστημα λαμβάνει ενημέρωση κατοχής και από ιδιοκτήτη.
+    \item[5.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 6 της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 3: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση προβλήματος:}
+\subsubsection*{Εναλλακτική Ροή 3: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση από υποστήριξη πελατών:}
 \begin{enumerate}
-    \item[6.α.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ιδιοκτήτη και όχι από τον ενοικιαστή.
-    \item[6.α.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
-    \item[6.α.3.] Το σύστημα λαμβάνει ενημέρωση κατοχής και από ενοικιαστή.
-    \item[6.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 7 της βασικής ροής.
+    \item[5.β.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ενοικιαστή και όχι από τον ιδιοκτήτη.
+    \item[5.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους.
+    \item[5.β.3.] Το σύστημα δεν λαμβάνει ενημέρωση κατοχής και από τον ιδιοκτήτη.
+    \item[5.β.4.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν με την υποστήριξη πελατών.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 4: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση από υποστήριξη πελατών:}
-\begin{enumerate}
-    \item[6.β.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ιδιοκτήτη και όχι από τον ενοικιαστή.
-    \item[6.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
-    \item[6.β.3.] Το σύστημα δεν λαμβάνει ενημέρωση κατοχής και από τον ενοικιαστή.
-    \item[6.β.4.] Το σύστημα ενημερώνεται από την υποστήριξη πελατών και το "ποσό ασφαλείας" αποστέλλεται στον λογαριασμό του χρήστη που αποφάσισε η υποστήριξη πελατών ότι αδικήθηκε.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική Ροή 5: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση προβλήματος:}
+\subsubsection*{Εναλλακτική Ροή 4: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση προβλήματος:}
 \begin{enumerate}
     \item[8.α.1.] Το σύστημα λαμβάνει ενημέρωση επιστροφής από τον ενοικιαστή και όχι από τον ιδιοκτήτη του βιβλίου.
     \item[8.α.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
     \item[8.α.3.] Το σύστημα λαμβάνει ενημέρωση επιστροφής και από τον ιδιοκτήτη.
-    \item[8.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 10.
+    \item[8.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 9.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 6: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση από υποστήριξη πελατών:}
 \begin{enumerate}
     \item[8.β.1.] Το σύστημα λαμβάνει ενημέρωση επιστροφής από τον ενοικιαστή και όχι από τον ιδιοκτήτη του βιβλίου.
-    \item[8.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
+    \item[8.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους.
     \item[8.β.3.] Το σύστημα δεν λαμβάνει ενημέρωση επιστροφής και από τον ιδιοκτήτη.
-    \item[8.β.4.] Το σύστημα ενημερώνεται από την υποστήριξη πελατών και το "ποσό ασφαλείας" αποστέλλεται στον λογαριασμό του χρήστη που αποφάσισε η υποστήριξη πελατών ότι αδικήθηκε.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική Ροή 7: Τέλος χρημάτων ενοικιαστή - Μετέπειτα προσθήκη απαραίτητου ποσού:}
-\begin{enumerate}
-    \item[6.α.1.] Το σύστημα αντιλαμβάνεται ότι έχουν τελειώσει τα χρήματα του ενοικιαστή.
-    \item[6.α.2.] Το σύστημα ζητάει από τον ενοικιαστή να προσθέσει παραπάνω χρήματα στον λογαριασμό του.
-    \item[6.α.3.] Ο ενοικιαστής προσθέτει παραπάνω χρήματα στον λογαριασμό του.
-    \item[6.α.4.] Το σύστημα αντιλαμβάνεται ότι προστέθηκαν παραπάνω χρήματα και χρεώνει από τον ενοικιαστή το ποσό που οφείλει, μαζί με 20\% επιτόκιο.
-    \item[6.α.5.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 7 της βασικής ροής.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική Ροή 8: Τέλος χρημάτων ενοικιαστή - Δεν προστίθεται το απαραίτητο ποσό:}
-\begin{enumerate}
-    \item[6.β.1.] Το σύστημα αντιλαμβάνεται ότι έχουν τελειώσει τα χρήματα του ενοικιαστή.
-    \item[6.β.2.] Το σύστημα ζητάει από τον ενοικιαστή να προσθέσει παραπάνω χρήματα στον λογαριασμό του.
-    \item[6.β.3.] Το σύστημα αντιλαμβάνεται μετά από ένα χρονικό διάστημα 2 εβδομάδων ότι ο χρήστης δεν έχει προσθέσει το ποσό που οφείλει στον λογαριασμό του.
-    \item[6.β.3.] Το σύστημα προσφέρει αυτόματα το "ποσό ασφαλείας" στον ιδιοκτήτη και απενεργοποιεί τη δυνατότητα του ενοικιαστή να νοικιάσει άλλο βιβλίο, μέχρι να πληρώσει το χρωστούμενο ποσό.
+    \item[8.β.4.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν με την υποστήριξη πελατών.
 \end{enumerate}
 
 \subsection{Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
@@ -576,7 +555,7 @@
     \item [2.β.4.3] Η ροή συνεχίζεται από το βήμα 3 της εναλλακτικής ροής 5.
 \end{enumerate}
 
-\subsection{Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων}
+\subsection{Επεξεργασία λίστας αγαπημένων και χρήση \\συστήματος ειδοποιήσεων}
 
 \subsubsection*{Βασική ροή <<Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων>>: Προσθήκη στην λίστα αγαπημένων και προβολή ειδοποίησης:}
 \begin{enumerate}
